[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Creator/Textures/SmallButton.png" type="Texture" id=1]
[ext_resource path="res://Game/Creator/CreatorButton.gd" type="Script" id=2]
[ext_resource path="res://Game/Creator/Textures/SmallButtonFocused.png" type="Texture" id=3]

[node name="SmallButton" type="TextureButton"]
margin_left = 326.0
margin_top = 9.0
margin_right = 350.0
margin_bottom = 33.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_SmallButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SmallButton_focus_exited"]
