[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Creator/CreatorButton.gd" type="Script" id=1]
[ext_resource path="res://Game/Creator/Textures/BigButton.png" type="Texture" id=2]
[ext_resource path="res://Game/Creator/Textures/BigButtonFocused.png" type="Texture" id=3]

[node name="BigButton" type="TextureButton"]
margin_left = 7.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 16, 16 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="." to="." method="_on_BigButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_BigButton_focus_exited"]
